--- a/index.html
+++ b/index.html
@@ -122,8 +122,13 @@
                 >Install Chrome extension</a
               >
               <a href="#" class="btn btn--outline">Become member</a>
-              <img src="img/pittNaked.jpg" alt="Pitt naked" class="hero-img" />
+              <!-- <img src="img/pittNaked.jpg" alt="Pitt naked" class="hero-img" /> -->
             </div>
+            <img
+              src="img/protoppic.jpg"
+              alt="ZieSorX Opensea"
+              class="hero-img"
+            />
           </div>
         </div>
       </section>
