--- a/index.html
+++ b/index.html
@@ -133,9 +133,260 @@
         </div>
       </section>
 
-      <section class="section-feature">Feature</section>
+      <section class="section-feature">
+        <div class="container">
+          <h2 class="heading-secondary">Features</h2>
+        </div>
 
-      <section class="section-faq"></section>
+        <div class="container grid grid--2-cols grid--center-v">
+          <!-- FEATURE 01 -->
+          <div class="fea-text-box">
+            <p class="fea-number">01</p>
+            <h3 class="heading-tertiary">
+              Wallet following integration on OpenSea
+            </h3>
+            <!-- <p class="fea-description">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p> -->
+          </div>
+          <div class="fea-img-box">
+            <img src="img/protoppic.jpg" class="fea-img" alt="OpenSea page" />
+          </div>
+
+          <!-- FEATURE 2 -->
+          <div class="fea-img-box">
+            <img src="img/protoppic.jpg" class="fea-img" alt="Opensea page" />
+          </div>
+          <div class="fea-text-box">
+            <p class="fea-number">02</p>
+            <h3 class="heading-tertiary">
+              Instant wallet activity notifications
+            </h3>
+            <!-- <p class="fea-description">
+            Once per week, approve the meal plan generated for you by Omnifood
+            AI. You can change ingredients, swap entire meals, or even add
+            your own recipes.
+          </p> -->
+          </div>
+
+          <!-- FEATURE 3 -->
+          <div class="fea-text-box">
+            <p class="fea-number">03</p>
+            <h3 class="heading-tertiary">Live collection activity alerts</h3>
+            <!-- <p class="fea-description">
+            Best chefs in town will cook your selected meal every day, and we
+            will deliver it to your door whenever works best for you. You can
+            change delivery schedule and address daily!
+          </p> -->
+          </div>
+          <div class="fea-img-box">
+            <img src="img/protoppic.jpg" class="fea-img" alt="OpenSeapage" />
+          </div>
+        </div>
+      </section>
+
+      <section class="section-faq">
+        <div class="container">
+          <h2 class="heading-secondary">FAQ</h2>
+        </div>
+
+        <div class="item-container">
+          <div class="item">
+            <div class="accordion-header-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg>
+              <p class="title-faq">What is Snoop?</p>
+            </div>
+            <div class="hidden-box">
+              <p>
+                Snoop is a browser extension that adds a following feature to
+                the OpenSea web page.
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="accordion-header-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg>
+              <p class="title-faq">What is the Snoop KEY?</p>
+            </div>
+            <div class="hidden-box">
+              <p>
+                The Snoop KEY grants the holder a life time subscription of out
+                services. If the KEY is no longer in your wallet, your
+                membership will be revoked.
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="accordion-header-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg>
+              <p class="title-faq">
+                How much does a Snoop membership NFT cost?
+              </p>
+            </div>
+            <div class="hidden-box">
+              <p>
+                Our NFT will cost 0.06 ETH on the mint site. (not including gas
+                fees)
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="accordion-header-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg>
+              <p class="title-faq">Which marketplaces does Snoop work on?</p>
+            </div>
+            <div class="hidden-box">
+              <p>
+                We are currently alone working on OpenSea since it is holds the
+                majority of trades and volume.
+              </p>
+            </div>
+          </div>
+
+          <div class="item open">
+            <div class="accordion-header-container">
+              <!-- <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg> -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M19 9l-7 7-7-7"
+                />
+              </svg>
+              <p class="title-faq">Is Snoop safe to use?</p>
+            </div>
+            <div class="hidden-box">
+              <p>
+                Yes, Snoop is safe to use. The Chrome web store verifies all
+                extensions before listing them and will keep malicious
+                extensions off the market. The safety of your MetaMask wallet
+                depends on its interactions with smart contracts through your
+                MetaMask signature confirmation. Hence, all extensions and
+                websites can never hack your wallet until you sign the contract.
+                All of our codes are posted in this GitHub.
+              </p>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="accordion-header-container">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="arrow-icon"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M9 5l7 7-7 7"
+                />
+              </svg>
+              <p class="title-faq">What chain is the Snoop NFT on?</p>
+            </div>
+            <div class="hidden-box">
+              <p>Ethereum chain, ERC-1155 token standard.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-cta">
+        <div class="container center-text">
+          <div class="cta">
+            <div class="cta-text-box center-text">
+              <h2 class="heading-secondary member-heading">
+                Let's get your first alert now!
+              </h2>
+              <a href="#" class="btn btn--full margin-right-sm btn-footer"
+                >Become member now</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">Snoop. copyright &copy; 2022</footer>
     </main>
   </body>
 </html>
