--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style/style.css" />
 
     <title>SNOOP</title>
-    <script src="scripts/controller.js"></script>
+    <script defefr src="scripts/controller.js"></script>
   </head>
 
   <body>
@@ -43,7 +43,10 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link"
+            <a
+              href="https://twitter.com/snooptool"
+              class="nav-link"
+              target="outside"
               ><svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="nav-icon"
