--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header class="header">
       <a href="#" class="logo-text"
-        ><img src="img/pitt.jpg" alt="Pitt" class="logo" />Snoop</a
+        ><img src="img/snoop-logo.jpeg" alt="Snoop Logo" class="logo" />snoop</a
       >
       <nav class="nav">
         <ul class="nav-list">
