--- a/pages/activate.html
+++ b/pages/activate.html
@@ -12,13 +12,18 @@
     />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/activate.css" />
+    <link rel="stylesheet" href="../style/queries.css" />
     <title>SNOOP : Activate Membership</title>
     <script type="module" defer src="../scripts/activateView.js"></script>
   </head>
   <body>
     <header class="header">
-      <a href="../index.html" class="logo-text"
-        ><img src="../img/pitt.jpg" alt="Pitt" class="logo" />Snoop</a
+      <a href="/index.html" class="logo-text"
+        ><img
+          src="../img/snoop-logo.jpeg"
+          alt="Snoop Logo"
+          class="logo"
+        />snoop</a
       >
       <nav class="nav">
         <ul class="nav-list">
@@ -109,7 +114,7 @@
     <main>
       <section class="section-activate">
         <div class="container activate--container">
-          <img class="logo-img" src="/img/pitt.jpg" alt="Pitt" />
+          <img class="logo-img" src="../img/snoop-logo.jpeg" alt="Snoop Logo" />
           <div class="activate-text-container">
             <h1 class="heading-primary activate-heading">
               Verify your membership
