--- a/pages/member.html
+++ b/pages/member.html
@@ -19,13 +19,18 @@
     />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="stylesheet" href="../style/member.css" />
+    <link rel="stylesheet" href="../style/queries.css" />
     <title>SNOOP : Become member</title>
     <script defer src="../scripts/member.js"></script>
   </head>
   <body>
     <header class="header">
-      <a href="../index.html" class="logo-text"
-        ><img src="../img/pitt.jpg" alt="Pitt" class="logo" />Snoop</a
+      <a href="/index.html" class="logo-text"
+        ><img
+          src="../img/snoop-logo.jpeg"
+          alt="Snoop Logo"
+          class="logo"
+        />snoop</a
       >
       <nav class="nav">
         <ul class="nav-list">
@@ -124,8 +129,10 @@
         </p>
 
         <figure class="figure grid grid--2-cols">
-          <div class="figure-img-container">
-            <img class="figure-img" src="../img/pittNaked.jpg" alt="Pitt" />
+          <div class="figure-vid-container">
+            <video width="500" height="500" class="key-vid" autoplay loop muted>
+              <source src="../img/key.mp4" type="video/mp4" />
+            </video>
           </div>
           <div class="figure-container">
             <h1 class="figure-text heading-secondary">Mint NFT</h1>
@@ -140,7 +147,7 @@
                 </li>
                 <li class="prop prop-2 prop-total">
                   <span class="prop-text">Total</span>
-                  <span id="total-amount">0.08 ETH</span>
+                  <span id="total-amount">0.004</span><span>ETH</span>
                 </li>
               </ul>
             </div>
